[gd_scene load_steps=10 format=4 uid="uid://ckwkb8hx6fx6l"]

[ext_resource type="Script" uid="uid://bnbfgbqsowddj" path="res://scripts/aquarium.gd" id="1_d0q3v"]
[ext_resource type="Texture2D" uid="uid://gs218or5uahf" path="res://assets/Tank Sprite Sheet.png" id="1_u42aw"]
[ext_resource type="Texture2D" uid="uid://dhn0v1aaslka8" path="res://assets/Pixel-16px Cave/tileset.png" id="2_d0q3v"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u5sy4"]
texture = ExtResource("1_u42aw")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gee14"]
texture = ExtResource("2_d0q3v")
3:1/animation_columns = 1
3:1/animation_mode = 1
3:1/animation_frame_0/duration = 1.0
3:1/animation_frame_1/duration = 1.0
3:1/0 = 0
3:1/0/z_index = -1
3:3/0 = 0
3:3/0/z_index = -1

[sub_resource type="TileSet" id="TileSet_gee14"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_u5sy4")
sources/2 = SubResource("TileSetAtlasSource_gee14")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ffceb"]
size = Vector2(88, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pxnnk"]
size = Vector2(73.5, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d0q3v"]
size = Vector2(310, 173)

[node name="Aquarium" type="Node2D"]
script = ExtResource("1_d0q3v")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(-14, -395)
tile_map_data = PackedByteArray("AAAAACYAAAAAAAAAAAABACYAAAABAAAAAAACACYAAAACAAAAAAADACYAAAACAAAAAAAEACYAAAACAAAAAAAFACYAAAACAAAAAAAGACYAAAACAAAAAAAHACYAAAACAAAAAAAIACYAAAACAAAAAAAJACYAAAACAAAAAAAKACYAAAACAAAAAAALACYAAAACAAAAAAAMACYAAAACAAAAAAANACYAAAACAAAAAAAOACYAAAACAAAAAAAPACYAAAACAAAAAAAQACYAAAACAAAAAAARACYAAAACAAAAAAASACYAAAACAAAAAAATACYAAAACAAAAAAAUACYAAAACAAAAAAAVACYAAAADAAAAAAAWACYAAAAAAAAAAAAXACYAAAAAAAAAAAABACUAAAAFAAAAAAABACQAAAAFAAAAAAABACMAAAAFAAAAAAABACIAAAAFAAAAAAABACEAAAAFAAAAAAABACAAAAAFAAAAAAABAB8AAAAFAAAAAAABAB4AAAAFAAAAAAABAB0AAAAFAAAAAAABABwAAAAFAAAAAAACABwAAgADAAMAAAADABwAAgADAAMAAAAEABwAAgADAAMAAAAFABwAAgADAAMAAAAGABwAAgADAAMAAAAHABwAAgADAAMAAAAIABwAAgADAAMAAAAJABwAAgADAAMAAAAKABwAAgADAAMAAAALABwAAgADAAMAAAAMABwAAgADAAMAAAANABwAAgADAAMAAAAOABwAAgADAAMAAAAPABwAAgADAAMAAAAQABwAAgADAAMAAAARABwAAgADAAMAAAASABwAAgADAAMAAAATABwAAgADAAMAAAAUABwAAgADAAMAAAALACMAAgADAAMAAAALACIAAgADAAMAAAALACEAAgADAAMAAAALACAAAgADAAMAAAALAB8AAgADAAMAAAALAB4AAgADAAMAAAALAB0AAgADAAMAAAAKAB0AAgADAAMAAAAJAB0AAgADAAMAAAAIAB0AAgADAAMAAAAHAB0AAgADAAMAAAAGAB0AAgADAAMAAAAFAB0AAgADAAMAAAAEAB0AAgADAAMAAAADAB0AAgADAAMAAAACAB0AAgADAAMAAAACAB4AAgADAAMAAAACAB8AAgADAAMAAAACACAAAgADAAMAAAACACEAAgADAAMAAAACACIAAgADAAMAAAACACMAAgADAAMAAAACACQAAgADAAMAAAACACUAAgADAAMAAAADACUAAgADAAMAAAADACQAAgADAAMAAAADACMAAgADAAMAAAADACIAAgADAAMAAAADACEAAgADAAMAAAADACAAAgADAAMAAAADAB8AAgADAAMAAAADAB4AAgADAAMAAAAEAB4AAgADAAMAAAAEAB8AAgADAAMAAAAEACAAAgADAAMAAAAEACEAAgADAAMAAAAEACIAAgADAAMAAAAEACMAAgADAAMAAAAEACQAAgADAAMAAAAEACUAAgADAAMAAAAFACUAAgADAAMAAAAFACQAAgADAAMAAAAFACMAAgADAAMAAAAFACIAAgADAAMAAAAFACEAAgADAAMAAAAFACAAAgADAAMAAAAFAB8AAgADAAMAAAAFAB4AAgADAAMAAAAGAB4AAgADAAMAAAAGAB8AAgADAAMAAAAGACAAAgADAAMAAAAGACEAAgADAAMAAAAGACIAAgADAAMAAAAGACMAAgADAAMAAAAGACQAAgADAAMAAAAGACUAAgADAAMAAAAHACUAAgADAAMAAAAHACQAAgADAAMAAAAHACMAAgADAAMAAAAHACIAAgADAAMAAAAHACEAAgADAAMAAAAHACAAAgADAAMAAAAHAB8AAgADAAMAAAAHAB4AAgADAAMAAAAIAB4AAgADAAMAAAAIAB8AAgADAAMAAAAIACAAAgADAAMAAAAIACEAAgADAAMAAAAIACIAAgADAAMAAAAIACMAAgADAAMAAAAIACQAAgADAAMAAAAIACUAAgADAAMAAAAJACUAAgADAAMAAAAJACQAAgADAAMAAAAJACMAAgADAAMAAAAJACIAAgADAAMAAAAJACEAAgADAAMAAAAJACAAAgADAAMAAAAJAB8AAgADAAMAAAAJAB4AAgADAAMAAAAKAB4AAgADAAMAAAAKAB8AAgADAAMAAAAKACAAAgADAAMAAAAKACEAAgADAAMAAAAKACIAAgADAAMAAAAKACMAAgADAAMAAAAKACQAAgADAAMAAAAKACUAAgADAAMAAAALACUAAgADAAMAAAALACQAAgADAAMAAAAMACQAAgADAAMAAAAMACMAAgADAAMAAAAMACIAAgADAAMAAAAMACEAAgADAAMAAAAMACAAAgADAAMAAAAMAB8AAgADAAMAAAAMAB4AAgADAAMAAAAMAB0AAgADAAMAAAANAB0AAgADAAMAAAANAB4AAgADAAMAAAANAB8AAgADAAMAAAANACAAAgADAAMAAAANACEAAgADAAMAAAANACIAAgADAAMAAAANACMAAgADAAMAAAANACQAAgADAAMAAAANACUAAgADAAMAAAAMACUAAgADAAMAAAAOACUAAgADAAMAAAAOACQAAgADAAMAAAAOACMAAgADAAMAAAAOACIAAgADAAMAAAAOACEAAgADAAMAAAAOACAAAgADAAMAAAAOAB8AAgADAAMAAAAOAB4AAgADAAMAAAAOAB0AAgADAAMAAAAPAB0AAgADAAMAAAAPAB4AAgADAAMAAAAPAB8AAgADAAMAAAAPACAAAgADAAMAAAAPACEAAgADAAMAAAAPACIAAgADAAMAAAAPACMAAgADAAMAAAAPACQAAgADAAMAAAAPACUAAgADAAMAAAAQACUAAgADAAMAAAAQACQAAgADAAMAAAAQACMAAgADAAMAAAAQACIAAgADAAMAAAAQACEAAgADAAMAAAAQACAAAgADAAMAAAAQAB8AAgADAAMAAAAQAB4AAgADAAMAAAAQAB0AAgADAAMAAAARAB0AAgADAAMAAAARAB4AAgADAAMAAAARAB8AAgADAAMAAAARACAAAgADAAMAAAARACEAAgADAAMAAAARACIAAgADAAMAAAARACMAAgADAAMAAAARACQAAgADAAMAAAARACUAAgADAAMAAAASACUAAgADAAMAAAASACQAAgADAAMAAAASACMAAgADAAMAAAASACIAAgADAAMAAAASACEAAgADAAMAAAASACAAAgADAAMAAAASAB8AAgADAAMAAAASAB4AAgADAAMAAAASAB0AAgADAAMAAAATAB0AAgADAAMAAAATAB4AAgADAAMAAAATAB8AAgADAAMAAAATACAAAgADAAMAAAATACEAAgADAAMAAAATACIAAgADAAMAAAATACMAAgADAAMAAAATACQAAgADAAMAAAATACUAAgADAAMAAAAUACUAAgADAAMAAAAUACQAAgADAAMAAAAUACMAAgADAAMAAAAUACIAAgADAAMAAAAUACEAAgADAAMAAAAUACAAAgADAAMAAAAUAB8AAgADAAMAAAAUAB4AAgADAAMAAAAUAB0AAgADAAMAAAABABsAAAAFAAAAAAAVACUAAAAEAAAAAAAVABsAAAAEAAAAAAAVABwAAAAEAAAAAAAVAB0AAAAEAAAAAAAVAB4AAAAEAAAAAAAVAB8AAAAEAAAAAAAVACAAAAAEAAAAAAAVACEAAAAEAAAAAAAVACIAAAAEAAAAAAAVACMAAAAEAAAAAAAVACQAAAAEAAAAAAACABsAAgADAAEAAAADABsAAgADAAEAAAAEABsAAgADAAEAAAAFABsAAgADAAEAAAAGABsAAgADAAEAAAAHABsAAgADAAEAAAAIABsAAgADAAEAAAAJABsAAgADAAEAAAAKABsAAgADAAEAAAALABsAAgADAAEAAAAMABsAAgADAAEAAAANABsAAgADAAEAAAAOABsAAgADAAEAAAAPABsAAgADAAEAAAAQABsAAgADAAEAAAARABsAAgADAAEAAAASABsAAgADAAEAAAATABsAAgADAAEAAAAUABsAAgADAAEAAAA=")
tile_set = SubResource("TileSet_gee14")

[node name="Goal" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="leftSide" type="CollisionShape2D" parent="Goal"]
position = Vector2(-34, 44.5)
shape = SubResource("RectangleShape2D_ffceb")

[node name="rightSide" type="CollisionShape2D" parent="Goal"]
position = Vector2(366.75, 44)
shape = SubResource("RectangleShape2D_pxnnk")

[node name="Water" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Water"]
position = Vector2(170, 129.5)
shape = SubResource("RectangleShape2D_d0q3v")

[connection signal="body_entered" from="Goal" to="." method="_on_goal_touched"]
[connection signal="body_entered" from="Water" to="." method="_on_water_body_entered"]
[connection signal="body_exited" from="Water" to="." method="_on_water_body_exited"]
